Style to two column only based on feedback move testfile content to index to make it visible for next push to master style fixed header content projects scolls over header with a nice effect moved social links

--- a/assets/stylesheets/layout.css
+++ b/assets/stylesheets/layout.css
@@ -5,25 +5,47 @@ body, html {
 #container {
   width: 95%;
   margin: 0 auto 4%;
+  position: relative;
 }
 
 #main-info {
-  width: 100%;
+  width: 95%;
+  min-height: 310px;
+  margin: 30px 0 40px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
   overflow: hidden;
 }
 
-#proj-one {
-  width: 100%;
+#title-nav {
+  float: left;
+  width: 66%;
 }
 
-#proj-two {
-  width: 100%;
-  clear: both;
+#projects {
+  background-color: white;
+  position: relative;
+  z-index: 5;
+  margin-top: 25em;
+  height: 100%;
+  padding-top: 9%;
+}
+
+.project-container {
+  position: relative;
+}
+
+.github-link {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  margin-left: -12%;
 }
 
 .project-box {
-  width: 70%;
-  padding-bottom: 70%;
+  width: 65%;
+  padding-bottom: 65%;
   margin: 10px auto;
   position: relative;
 }
@@ -37,74 +59,13 @@ body, html {
 }
 
 .content-description {
-  width: 68%;
+  width: 62%;
   margin: auto;
-  padding: 2%;
+  padding: 3% 3% 6% 3%;
 }
 
 #profile-pic {
-  width: 25%;
+  width: 28%;
   float: left;
-  margin: 3%;
+  margin: 3% 3% 3% 0;
 }
-
-.project-container{
-  height: 28em;
-}
-
-/*
-#container {
-  width: 90%;
-  height: 100%;
-  margin: auto;
-  background-color: orange;
-  position: relative;
-}
-
-#proj-one {
-  width: 36%;
-  float: left;
-  background-color: red;
-  opacity: 50%;
-  margin: 10% 0 0 0;
-  position: relative;
-  left: 0;
-}
-
-#main-info {
-  width: 26.8%;
-  margin: 0;
-  float: left;
-  background-color: green;
-  height: 100%;
-  position: fixed;
-  left: 36.6%;
-}
-
-#proj-two {
-  width: 36%;
-  float: right;
-
-  background-color: blue;
-  margin: 10% 0 0 0;
-  position: relative;
-  right: 0;
-}
-
-.project-box {
-  width: 45%;
-  padding-bottom: 45%;
-  margin: 3% 0 0 3%;
-  background-color: gray;
-  float: left;
-  position: relative;
-}
-
-.box-content {
-  position: absolute;
-  right: 5px;
-  bottom: 5px;
-  left: 5px;
-}*/
-
-/*---------------------------------------------------------*/
