--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -3,16 +3,6 @@ body {
   font-size: 0.8em;
 }
 
-.branding {
-  width: 20em;
-  margin: 0 auto;
-  margin-top: 3em;
-}
-
-#logolocation {
-  text-align: center;
-}
-
 .message {
     margin: 0 auto;
     letter-spacing: 0.04em;
@@ -21,24 +11,19 @@ body {
 
 h1 {
   text-align: center;
-  font-size: 1.5em;
-  margin: 1em 0 0.25em;
+  margin: 0;
 }
 
 h2 {
   color: #BE0908;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.05em;
   text-align: center;
+  margin: 0.05em;
+  font-size: 1.2em;
 }
-
-
-#rhlogo {
-    height: 12em;
-  }
 
 a:link {
   color: #BE0908;
-
 }
 
 a:visited {
@@ -50,18 +35,22 @@ a:hover {
 }
 
 nav {
-  margin: % 5%;
+  margin: 10% 0;
   text-align: center;
 }
 
 .icon-link {
-    padding: 1em 0.7em;
-    font-size: 1.45em;
-  }
+  padding: 0 3.25%;
+  font-size: 1.45em;
+}
+
+.omega {
+  margin-right: 0;
+  padding-right: 0;
+}
 
 ul  {
   list-style-type: none;
-  margin: 2em 0 0 0;
   padding: 0;
 }
 
